# sdc-server

./: .dockerignore  .gitignore  Dockerfile  MAINTAINERS.md  README.md  cleanup-policy.json  cloudbuild.yaml  entrypoint.sh  pyproject.toml
data/structure-definitions/: DeviceUseStatement.json  DiagnosticReport.json  StructureDefinition-opat-continuous-infusion-questionnaire.json
scripts/: gen_license_keypair.py  mint_license.py
src/sdc_server/: __init__.py  _build_flags.py  app.py  fhir_parameters.py  integrity_check.py  license_gate.py  structure_definitions.py  utils.py
src/sdc_server/routers/: v1.py
tests/: conftest.py  regen_fixtures.py  test_extract.py  test_fhir_parameters.py  test_populate.py  test_root.py  test_validate.py
tests/fixtures/01_one_string/: expected.json  q.json  qr.json
tests/fixtures/01_one_string/sd/: Note.json
tests/fixtures/04_nested_backbone/: expected.json  q.json  qr.json
tests/fixtures/04_nested_backbone/sd/: Person.json
tests/fixtures/05_array_repeats/: expected.json  q.json  qr.json
tests/fixtures/05_array_repeats/sd/: Tags.json
tests/fixtures/08_resource_observation/: expected.json  q.json  qr.json
tests/fixtures/08_resource_observation/sd/: MyObservation.json
tests/fixtures/onco_logicalmodels/: expected.json  q.json  qr.json
tests/fixtures/onco_logicalmodels/sd/: onco-trastuzumab-questionnaire.json
tests/fixtures/onco_resources/: expected.json  q.json  qr.json
tests/fixtures/opat_logicalmodels/: expected.json  q.json  qr.json
tests/fixtures/opat_resources/: expected.json  q.json  qr.json
tests/fixtures/opat_resources/sd/: Observation.json
