[project]
name = "sdc-server"
version = "0.1.0"
description = "FHIR SDC $extract HTTP service (definition-based extraction)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BUSL-1.1" }
authors = [{ name = "Tiro.health" }]
dependencies = [
    "fastapi[standard]>=0.112.0",
    "fhir-sdc",
    "pyjwt>=2.8",
    "cryptography>=42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdc_server"]

[tool.uv]
managed = true

# Pin fhir-sdc to a specific git tag. The Docker build re-pins the same ref
# via the FHIR_SDC_REF build arg (see Dockerfile) — keep the two in sync.
[tool.uv.sources]
fhir-sdc = { git = "ssh://git@github.com/tiro-health/fhir-sdc-rs.git", tag = "v0.1.0-rc8" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
