[project]
name = "sdc-server"
version = "0.1.0"
description = "FHIR SDC $extract HTTP service (definition-based extraction)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BUSL-1.1" }
authors = [{ name = "Tiro.health" }]
dependencies = [
    "fastapi[standard]>=0.112.0",
    "fhir-sdc==0.1.0",
    "pyjwt>=2.8",
    "cryptography>=42",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdc_server"]

[tool.uv]
managed = true
# Resolve credentials for private indexes (atticus GAR) via the system keyring.
# Pair with `keyrings.google-artifactregistry-auth` so gcloud's ADC is used —
# see README for the setup. The Docker build mounts a short-lived access token
# instead (no keyring inside the image).
keyring-provider = "subprocess"

# Atticus — Tiro's private Google Artifact Registry. The fhir-sdc wheel lives
# here. `explicit = true` means uv only consults this index for packages whose
# source explicitly names it, so PyPI keeps serving everything else.
[[tool.uv.index]]
name = "atticus"
url = "https://europe-west1-python.pkg.dev/tiroapp-4cb17/atticus/simple/"
explicit = true

[tool.uv.sources]
fhir-sdc = { index = "atticus" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
